# shelf-occupancy-analyzer

./: .gitignore  GETTING_STARTED.md  INDEX.md  MEJORAS_IMPLEMENTADAS.md  PIPELINE_OPTIMIZATION.md  README.md  REPORTE_FINAL.md  STREAMLIT_APP.md  app.py  main.py  process_all_images.py  pyproject.toml  requirements.txt  shelf_occupancy_inference.py  visualize_pipeline.py
config/: config.yaml
data/raw/SKU110K_fixed/images/: README.md
data/raw/sample/: README.md
data/results/examples/test_1440/: test_1440_report.txt
data/results/examples/test_179/: test_179_report.txt
data/results/examples/test_192/: test_192_report.txt
notebooks/: 01_test_preprocessing.ipynb  shelf_occupancy_analysis.ipynb  test_perspective_improvements.ipynb
src/shelf_occupancy/: __init__.py  config.py
src/shelf_occupancy/analysis/: __init__.py  grid_analysis.py
src/shelf_occupancy/data/: download_dataset.py
src/shelf_occupancy/depth/: __init__.py  estimator.py
src/shelf_occupancy/detection/: __init__.py  edges.py  lines.py  shelves.py
src/shelf_occupancy/preprocessing/: __init__.py  image_processor.py  perspective.py
src/shelf_occupancy/utils/: __init__.py  geometry.py  image_io.py
src/shelf_occupancy/visualization/: __init__.py  overlay.py
